@@ -1,5 +1,7 @@
 2002-02-06  jacob berkman  <jacob@ximian.com>
 
+	* src/Makefile.am (ghex2_SOURCES): add some missing sources
+
 	* configure.in (AC_OUTPUT): remove omf-install/Makefile for now
 
 2001-11-13  Jaka Mocnik  <jaka@gnu.org>
